Fixing whitespace and rogue scrollbar

--- a/src/tabs.scss
+++ b/src/tabs.scss
@@ -95,7 +95,8 @@ $spacing-four: calc($spacing-eight / 2);
   
     &__tab-list {
       display: flex;
-      overflow: scroll;
+      overflow-x: scroll;
+      overflow-y: hidden;
       margin: 0;
     }
   
